--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- SoundCloud -->
         <div class="embed">
           <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/PzmQ0bF4Z28epDB0yz&color=%23ffd84d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+            src="<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2008790983&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/drgray_sic" title="Dr.Gray &amp; Mrs.Dr Gray" target="_blank" style="color: #cccccc; text-decoration: none;">Dr.Gray &amp; Mrs.Dr Gray</a> · <a href="https://soundcloud.com/drgray_sic/love-is-techno-part-i" title="Love is Techno Part I" target="_blank" style="color: #cccccc; text-decoration: none;">Love is Techno Part I</a></div>"></iframe>
         </div>
       </div>
       <div class="socials center">
@@ -143,7 +143,7 @@
         </form>
       </div>
       <div class="socials">
-        <a href="https://on.soundcloud.com/PzmQ0bF4Z28epDB0yz" aria-label="SoundCloud">SoundCloud</a>
+        <a href="https://soundcloud.com/drgray_sic?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" aria-label="SoundCloud">SoundCloud</a>
         <a href="https://www.tiktok.com/@dr.gray.sic?_t=ZN-90LdwYo8FoU&_r=1" aria-label="TikTok Dr.Gray">TikTok (DR.GRAY)</a>
         <a href="https://www.tiktok.com/@ktina1986?_t=ZN-90Le06SEqmM&_r=1" aria-label="TikTok Mrs.Dr.Gray">TikTok (MRS.)</a>
       </div>
