index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Navigation -->
+
   <header class="main-header">
     <nav class="main-nav">
       <ul>
@@ -15,32 +15,30 @@
         <li><a href="bio.html">Bio</a></li>
         <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
-        <li><a href="termine.html">Termine</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero">
-    <img src="assets/images/flx10-gold.png" alt="Pioneer FLX10" class="flx10-img" />
     <div class="hero-text">
       <h1>Dr. Gray & Mrs. Dr. Gray</h1>
-      <p>Wie die Leidenschaft zur Musik zur Liebe wurde</p>
+      <p>Wenn Musik zur Liebe wurde 🎧❤️</p>
       <div class="cta-buttons">
-        <a href="bio.html">Über uns</a>
         <a href="musik.html">Musik hören</a>
-        <a href="shop.html">Shop</a>
+        <a href="shop.html">Shop besuchen</a>
       </div>
     </div>
+    <img src="assets/images/flx10-gold.png" alt="FLX10 DJ Setup" class="flx10-img" />
   </section>
 
-  <!-- Social Media -->
   <footer class="social-footer">
-    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
-    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
-    <a href="https://on.soundcloud.com/YfPpQTsY5UeGpIc0Hg" target="_blank">SoundCloud</a>
+    <a href="#">TikTok</a>
+    <a href="#">Instagram</a>
+    <a href="#">SoundCloud</a>
   </footer>
+
+  <script src="main.js"></script>
 </body>
 </html>
