--- a/videos.html
+++ b/videos.html
@@ -25,17 +25,41 @@
     <p>Live-Momente, TikTok-Clips und visuelle Stories</p>
 
     <div class="video-grid">
-      <!-- Beispiel-Videos – du kannst diese durch echte TikTok/YouTube Links ersetzen -->
-      <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/DLX62G4lc44" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/Tj75Arhq5ho" allowfullscreen></iframe>
+      <!-- TikTok Video 1 -->
+      <blockquote 
+        class="tiktok-embed" 
+        cite="https://www.tiktok.com/@dr.gray.sic/video/7480522468034350359" 
+        data-video-id="7480522468034350359" 
+        style="max-width: 100%; min-width: 280px;">
+        <section>Loading…</section>
+      </blockquote>
+
+      <!-- TikTok Video 2 -->
+      <blockquote 
+        class="tiktok-embed" 
+        cite="https://www.tiktok.com/@ktina1986/video/7552419646649928982" 
+        data-video-id="7552419646649928982" 
+        style="max-width: 100%; min-width: 280px;">
+        <section>Loading…</section>
+      </blockquote>
+
+      <!-- TikTok Video 3 -->
+      <blockquote 
+        class="tiktok-embed" 
+        cite="https://www.tiktok.com/@dr.gray.sic/video/7521419161260526870" 
+        data-video-id="7521419161260526870" 
+        style="max-width: 100%; min-width: 280px;">
+        <section>Loading…</section>
+      </blockquote>
     </div>
+
+    <script async src="https://www.tiktok.com/embed.js"></script>
 
     <div class="livestream-info">
       <h2>📅 Nächste TikTok-Lives</h2>
       <ul>
-        <li>🕒 Samstag 21:00 Uhr – Live aus dem Studio</li>
-        <li>🕒 Mittwoch 20:00 Uhr – Q&A + DJ Talk</li>
+        <li>🕒 Freitag 10.10.2025 20:00 Uhr – Live aus dem Studio</li>
+        <li>🕒 Freitag 17.10.2025 20:00 Uhr – Live aus dem Studio</li>
       </ul>
     </div>
   </section>
