--- a/musik.html
+++ b/musik.html
@@ -36,9 +36,9 @@
     </div>
 
     <div class="musik-links">
-      <a href="https://open.spotify.com/DEIN-SPOTIFY" target="_blank">🎵 Spotify</a>
-      <a href="https://www.tiktok.com/@DEIN-TIKTOK" target="_blank">📱 TikTok</a>
-      <a href="https://soundcloud.com/DEIN-SOUNDCLOUD-NAME" target="_blank">🔊 SoundCloud</a>
+      <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">📱 🎧 🎶Dr. Gray🎶🎧</a>
+      <a href="https://www.tiktok.com/@ktina1986" target="_blank">📱 🎧🎶Mrs. Dr. Gray 🎶🎧</a>
+      <a href="https://soundcloud.com/drgray_sic" target="_blank">🔊 SoundCloud</a>
     </div>
   </section>
 
