--- a/musik.html
+++ b/musik.html
@@ -23,6 +23,20 @@
   <section class="musik-section">
     <h1>🎧 Unsere Musik</h1>
     <p>Erlebe unsere Sets, Remixes und Kollaborationen.</p>
+    <iframe 
+  width="100%" 
+  height="600" 
+  scrolling="no" 
+  frameborder="no" 
+  allow="autoplay" 
+  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+</iframe>
+
+<div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight: 100;">
+  <a href="https://soundcloud.com/drgray_sic" title="Dr.Gray &amp; Mrs.Dr Gray" target="_blank" style="color: #cccccc; text-decoration: none;">Dr.Gray &amp; Mrs.Dr Gray</a> · 
+  <a href="https://soundcloud.com/drgray_sic/syncopath-part-ii" title="SYNCOPATH Part II" target="_blank" style="color: #cccccc; text-decoration: none;">SYNCOPATH Part II</a>
+</div>
+
 
     <div class="musik-player">
       <iframe 
