--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. Gray & Mrs. Dr. Gray</title>
+  <title>Dr. Gray & Mrs. Dr. Gray – Offizielle Website</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
+  <!-- Navigation -->
   <header class="main-header">
     <nav class="main-nav">
       <ul>
@@ -21,22 +22,31 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-text">
-      <h1>Dr. Gray & Mrs. Dr. Gray</h1>
-      <p>Wenn Musik zur Liebe wurde 🎧❤️</p>
-      <div class="cta-buttons">
-        <a href="musik.html">Musik hören</a>
-        <a href="shop.html">Shop besuchen</a>
-      </div>
+      <h1>Willkommen bei Dr. Gray & Mrs. Dr. Gray</h1>
+      <p>Beats. Liebe. Leidenschaft – Musik, die verbindet.</p>
     </div>
-    <img src="assets/images/flx10-gold.png" alt="FLX10 DJ Setup" class="flx10-img" />
   </section>
 
+  <!-- TikTok Livestream-Termine -->
+  <section class="livestream-times" style="text-align: center; padding: 2rem;">
+    <h2>🔴 Nächste TikTok-Lives</h2>
+    <ul style="list-style: none; padding: 0;">
+      <li>📍 Freitag 10.10.2025 – 20:00 Uhr – Live aus dem Studio</li>
+      <li>📍 Freitag 17.10.2025 – 20:00 Uhr – Live aus dem Studio</li>
+    </ul>
+  </section>
+
+  <!-- Optional: Weitere Inhalte wie Highlights, Musikplayer usw. -->
+
+  <!-- Footer -->
   <footer class="social-footer">
-    <a href="#">TikTok</a>
-    <a href="#">Instagram</a>
-    <a href="#">SoundCloud</a>
+    <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
+    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
+    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
+    <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
   </footer>
 
   <script src="main.js"></script>
