--- a/kontakt.html
+++ b/kontakt.html
@@ -30,7 +30,7 @@
 
   <section class="contact-section">
     <div class="contact-info">
-      <p><strong>Email:</strong> <a href="mailto:drgray.music@gmail.com">drgray.music@gmail.com</a></p>
+      <p><strong>Email:</strong> <a href="mailto:management@drgray-mrsdrgray.com">management@drgray-mrsdrgray.com</a></p>
       <p><strong>TikTok:</strong> <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">@dr.gray.sic</a> + <a href="https://www.tiktok.com/@ktina1986" target="_blank">@ktina1986</a></p>
       <p><strong>SoundCloud:</strong> <a href="https://soundcloud.com/drgray_sic" target="_blank">soundcloud.com/drgray_sic</a></p>
     </div>
