--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header class="main-header">
     <nav class="main-nav">
       <ul>
@@ -14,34 +15,32 @@
         <li><a href="bio.html">Bio</a></li>
         <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
-        <li><a href="shop.html">Shop</a></li>
+        <li><a href="shop.html" class="active">Shop</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="shop-section">
-    <h1>🛍️ Unser Shop</h1>
-    <p>Exklusive Designs, Hoodies & Shirts – powered by Shirtee</p>
-
-    <div class="shop-logos">
-      <img src="assets/images/logo1.png" alt="Dr. Gray Logo" />
-      <img src="assets/images/logo2.png" alt="Mrs. Dr. Gray Logo" />
-    </div>
-
-    <div class="shop-links">
-      <a href="https://www.shirtee.com/de/store/drgray-mrsdrgray/" target="_blank">
-        🔗 Jetzt shoppen auf Shirtee.com
-      </a>
-    </div>
-
-    <div class="shop-info">
-      <p><strong>Zahlung nur über PayPal möglich</strong> – 100 % abgesichert & bequem!</p>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>🛍️ Unser offizieller Merch</h1>
+      <p>Logos, Styles & Streetwear – powered by Shirtee</p>
     </div>
   </section>
 
+  <section class="shop-section" style="padding: 2rem; background-color: #111;">
+    <h2 style="text-align:center; color:gold;">🖤 Direkt hier shoppen</h2>
+    <p style="text-align:center; color:#ccc;">Alle Designs exklusiv von Dr. Gray & Mrs. Dr. Gray</p>
+
+    <!-- iFrame Embed -->
+    <iframe src="https://www.shirtee.com/de/store/drgray-mrsdrgray/" width="100%" height="1600" frameborder="0" style="border: none; margin-top: 2rem;"></iframe>
+  </section>
+
   <footer class="social-footer">
-    <p>© 2025 Dr. Gray & Mrs. Dr. Gray – Fashion meets Beats</p>
+    <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
+    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
+    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
+    <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
   </footer>
 
   <script src="main.js"></script>
