--- a/shop.html
+++ b/shop.html
@@ -28,12 +28,19 @@
     </div>
   </section>
 
-  <section class="shop-section" style="padding: 2rem; background-color: #111;">
-    <h2 style="text-align:center; color:gold;">🖤 Direkt hier shoppen</h2>
-    <p style="text-align:center; color:#ccc;">Alle Designs exklusiv von Dr. Gray & Mrs. Dr. Gray</p>
+  <section class="shop-section" style="text-align: center; padding: 2rem; background-color: #111;">
+    <h2 style="color: gold;">🖤 Direkt hier shoppen</h2>
+    <p style="color: #ccc;">Alle Designs exklusiv von Dr. Gray & Mrs. Dr. Gray</p>
 
-    <!-- iFrame Embed -->
-    <iframe src="https://www.shirtee.com/de/store/drgray-mrsdrgray/" width="100%" height="1600" frameborder="0" style="border: none; margin-top: 2rem;"></iframe>
+    <!-- Shop Bild-Vorschau -->
+    <a href="https://www.shirtee.com/de/store/drgray-mrsdrgray/" target="_blank">
+      <img src="assets/images/shop-preview.jpg" alt="Shop Vorschau" style="max-width: 500px; width: 100%; border-radius: 12px; box-shadow: 0 0 20px rgba(255,215,0,0.2); margin-top: 2rem;" />
+    </a>
+
+    <!-- Shop Button -->
+    <p style="margin-top: 1.5rem;">
+      <a href="https://www.shirtee.com/de/store/drgray-mrsdrgray/" target="_blank" style="display: inline-block; padding: 1rem 2rem; font-size: 1.2rem; color: #0a0a0a; background-color: gold; border-radius: 30px; font-weight: bold; text-decoration: none;">🔗 Direkt zum Shop</a>
+    </p>
   </section>
 
   <footer class="social-footer">
