--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. Gray & Mrs. Dr. Gray – Offizielle Website</title>
+  <title>Home – Dr. Gray & Mrs. Dr. Gray</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Navigation -->
   <header class="main-header">
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="bio.html">Bio</a></li>
         <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
@@ -22,33 +20,34 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-text">
-      <h1>Willkommen bei Dr. Gray & Mrs. Dr. Gray</h1>
-      <p>Beats. Liebe. Leidenschaft – Musik, die verbindet.</p>
+      <h1>Dr. Gray & Mrs. Dr. Gray</h1>
+      <p>Techno mit Seele – aus Liebe geboren.</p>
+      <h3 style="color: gold; margin-top: 1rem;">🎥 LIVE auf TikTok: <strong>Freitag 10.10.2025 ab 20 Uhr</strong></h3>
     </div>
   </section>
 
-  <!-- TikTok Livestream-Termine -->
-  <section class="livestream-times" style="text-align: center; padding: 2rem;">
-    <h2>🔴 Nächste TikTok-Lives</h2>
-    <ul style="list-style: none; padding: 0;">
-      <li>📍 Freitag 10.10.2025 – 20:00 Uhr – Live aus dem Studio</li>
-      <li>📍 Freitag 17.10.2025 – 20:00 Uhr – Live aus dem Studio</li>
-    </ul>
+  <section style="padding: 2rem 1rem; background-color: #111; color: #ccc; text-align: center;">
+    <h2 style="color: gold; font-family: 'Playfair Display', serif; font-size: 2rem;">🎵 Unser Sound</h2>
+    <p style="max-width: 800px; margin: auto; font-size: 1.1rem;">
+      Dr. Gray & Mrs. Dr. Gray stehen für treibenden, melodischen und emotionalen Techno.  
+      Ihr Sound vereint <strong>Drumcode Power</strong>, <strong>Peaktime-Energie</strong> und <strong>hypnotische Basslines</strong>,  
+      die Körper und Seele bewegen. 
+      <br /><br />
+      Ob <strong>Progressive, Goa oder Psy</strong> – wenn die Nacht danach verlangt, spielen sie das, was passt.  
+      Jeder Track erzählt eine Geschichte. Jeder Drop ist ein Gefühl.
+      <br /><br />
+      <span style="color: gold; font-weight: bold;">WE LIVE TECHNO – WE LOVE MUSIC.</span>
+    </p>
   </section>
 
-  <!-- Optional: Weitere Inhalte wie Highlights, Musikplayer usw. -->
-
-  <!-- Footer -->
   <footer class="social-footer">
     <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
     <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
     <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
     <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
   </footer>
-
   <script src="main.js"></script>
 </body>
 </html>
