musik.html aktualisieren

--- a/musik.html
+++ b/musik.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="bio.html">Bio</a></li>
-        <li><a href="musik.html">Musik</a></li>
+        <li><a href="musik.html" class="active">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
@@ -20,32 +20,39 @@
     </nav>
   </header>
 
-  <section class="musik-section">
-    <h1>🎧 Unsere Musik</h1>
-    <p>Erlebe unsere Sets, Remixes und Kollaborationen.</p>
-    <iframe 
-  width="100%" 
-  height="600" 
-  scrolling="no" 
-  frameborder="no" 
-  allow="autoplay" 
-  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
-</iframe>
+  <section class="hero">
+    <div class="hero-text">
+      <img src="assets/images/logo1.png" alt="Logo 1" style="height: 60px; margin-right: 1rem; vertical-align: middle;" />
+      <span style="font-size: 2rem; color: gold; font-family: 'Playfair Display', serif;">Dr. Gray & Mrs. Dr. Gray – Musik</span>
+      <img src="assets/images/logo2.png" alt="Logo 2" style="height: 60px; margin-left: 1rem; vertical-align: middle;" />
+    </div>
+  </section>
 
-<div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight: 100;">
-  <a href="https://soundcloud.com/drgray_sic" title="Dr.Gray &amp; Mrs.Dr Gray" target="_blank" style="color: #cccccc; text-decoration: none;">Dr.Gray &amp; Mrs.Dr Gray</a> · 
-  <a href="https://soundcloud.com/drgray_sic/syncopath-part-ii" title="SYNCOPATH Part II" target="_blank" style="color: #cccccc; text-decoration: none;">SYNCOPATH Part II</a>
-</div>
+  <section style="padding: 2rem 1rem; background-color: #111; color: #ccc; text-align: center;">
+    <h2 style="color: gold; font-family: 'Playfair Display', serif; font-size: 2rem;">🎵 Techno mit Gefühl</h2>
+    <p style="max-width: 800px; margin: auto; font-size: 1.1rem;">
+      Hier findest du eine Auswahl an <strong>Mixes, Live Sets</strong> und <strong>musikalischen Reisen</strong> direkt aus dem Herzen von Dr. Gray & Mrs. Dr. Gray.
+      <br><br>
+      Ob <strong>Deep Techno, Peak Time, Progressive oder Melodic Vibes</strong> – jedes Set erzählt eine Geschichte.
+      <br><br>
+      Lass dich fallen. Fühle den Beat. Und tauche ein in unsere Welt.
+    </p>
+  </section>
 
-    <div class="musik-links">
-      <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">📱 🎧 🎶Dr. Gray🎶🎧</a>
-      <a href="https://www.tiktok.com/@ktina1986" target="_blank">📱 🎧🎶Mrs. Dr. Gray 🎶🎧</a>
-      <a href="https://soundcloud.com/drgray_sic" target="_blank">🔊 SoundCloud</a>
+  <section style="background-color: #0a0a0a; padding: 2rem 1rem; text-align: center;">
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/drgray_sic/sets%2Fdrgray-mixes&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+    </iframe>
+    <div style="margin-top: 1rem; font-size: 0.9rem; color: #888;">
+      <a href="https://soundcloud.com/drgray_sic" target="_blank" style="color: gold;">🎧 Mehr Sets auf SoundCloud ansehen</a>
     </div>
   </section>
 
   <footer class="social-footer">
-    <p>© 2025 Dr. Gray & Mrs. Dr. Gray</p>
+    <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
+    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
+    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
+    <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
   </footer>
 
   <script src="main.js"></script>
