musik.html aktualisieren

--- a/musik.html
+++ b/musik.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Musik – Dr. Gray & Mrs. Dr. Gray</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .main-header {
+      position: sticky;
+      top: 0;
+      background-color: rgba(10, 10, 10, 0.95);
+      z-index: 1000;
+    }
+  </style>
 </head>
 <body>
   <header class="main-header">
@@ -20,7 +28,7 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero" style="padding: 4rem 1rem; text-align: center;">
     <div class="hero-text">
       <img src="assets/images/logo1.png" alt="Logo 1" style="height: 60px; margin-right: 1rem; vertical-align: middle;" />
       <span style="font-size: 2rem; color: gold; font-family: 'Playfair Display', serif;">Dr. Gray & Mrs. Dr. Gray – Musik</span>
@@ -31,11 +39,11 @@
   <section style="padding: 2rem 1rem; background-color: #111; color: #ccc; text-align: center;">
     <h2 style="color: gold; font-family: 'Playfair Display', serif; font-size: 2rem;">🎵 Techno mit Gefühl</h2>
     <p style="max-width: 800px; margin: auto; font-size: 1.1rem;">
-      Hier findest du eine Auswahl an <strong>Mixes, Live Sets</strong> und <strong>musikalischen Reisen</strong> direkt aus dem Herzen von Dr. Gray & Mrs. Dr. Gray.
+      Hier findest du eine Auswahl an <strong>Live Sets, Mixes und musikalischen Reisen</strong> direkt aus dem kreativen Zentrum von Dr. Gray & Mrs. Dr. Gray.
       <br><br>
-      Ob <strong>Deep Techno, Peak Time, Progressive oder Melodic Vibes</strong> – jedes Set erzählt eine Geschichte.
+      Ob <strong>Deep Techno, Melodic Peak Time oder Hypnotic Bass</strong> – jedes Set spiegelt Emotionen wider, baut Spannung auf und entlädt sich in purer Energie.
       <br><br>
-      Lass dich fallen. Fühle den Beat. Und tauche ein in unsere Welt.
+      Jedes Set ist handverlesen, jeder Mix ist eine Geschichte. Für Körper, Geist und Seele.
     </p>
   </section>
 
