--- a/musik.html
+++ b/musik.html
@@ -12,6 +12,34 @@
       background-color: rgba(10, 10, 10, 0.95);
       z-index: 1000;
     }
+    .music-heading {
+      background-color: #0a0a0a;
+      padding: 2rem 1rem 1rem;
+      text-align: center;
+    }
+    .music-heading h1 {
+      font-size: 2.2rem;
+      color: gold;
+      font-family: 'Playfair Display', serif;
+      margin: 1rem 0;
+    }
+    .logo-pair {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      margin-top: 1rem;
+    }
+    .logo-pair img {
+      height: 60px;
+    }
+    .music-hero {
+      background-image: url('assets/images/flx10-gold.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 300px;
+    }
   </style>
 </head>
 <body>
@@ -28,13 +56,15 @@
     </nav>
   </header>
 
-  <section class="hero" style="padding: 4rem 1rem; text-align: center;">
-    <div class="hero-text">
-      <img src="assets/images/logo1.png" alt="Logo 1" style="height: 60px; margin-right: 1rem; vertical-align: middle;" />
-      <span style="font-size: 2rem; color: gold; font-family: 'Playfair Display', serif;">Dr. Gray & Mrs. Dr. Gray – Musik</span>
-      <img src="assets/images/logo2.png" alt="Logo 2" style="height: 60px; margin-left: 1rem; vertical-align: middle;" />
+  <section class="music-heading">
+    <div class="logo-pair">
+      <img src="assets/images/logo1.png" alt="Logo 1" />
+      <h1>Musik – Dr. Gray & Mrs. Dr. Gray</h1>
+      <img src="assets/images/logo2.png" alt="Logo 2" />
     </div>
   </section>
+
+  <section class="music-hero"></section>
 
   <section style="padding: 2rem 1rem; background-color: #111; color: #ccc; text-align: center;">
     <h2 style="color: gold; font-family: 'Playfair Display', serif; font-size: 2rem;">🎵 Techno mit Gefühl</h2>
@@ -49,7 +79,7 @@
 
   <section style="background-color: #0a0a0a; padding: 2rem 1rem; text-align: center;">
     <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/drgray_sic/sets%2Fdrgray-mixes&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/drgray_sic/sets/drgray-mixes&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
     </iframe>
     <div style="margin-top: 1rem; font-size: 0.9rem; color: #888;">
       <a href="https://soundcloud.com/drgray_sic" target="_blank" style="color: gold;">🎧 Mehr Sets auf SoundCloud ansehen</a>
