musik.html aktualisieren

--- a/musik.html
+++ b/musik.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <header class="main-header">
+  <header class="main-header sticky">
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,37 +21,106 @@
     </nav>
   </header>
 
-  <!-- Header / Titel + Logos über dem Bild -->
   <section class="music-heading">
-    <div class="logo-pair">
-      <img src="assets/images/logo1.png" alt="Logo 1" class="logo-img" />
-      <h1 class="music-title">Musik – Dr. Gray & Mrs. Dr. Gray</h1>
-      <img src="assets/images/logo2.png" alt="Logo 2" class="logo-img" />
+    <div class="music-header-container">
+      <img src="assets/images/drgray-logo.png" alt="Dr. Gray Logo" class="logo-small left">
+      <h1 class="golden-heading">Musik – Dr. Gray &amp; Mrs. Dr. Gray</h1>
+      <img src="assets/images/mrsdrgray-logo.png" alt="Mrs. Dr. Gray Logo" class="logo-small right">
     </div>
   </section>
 
-  <!-- Hintergrundbild -->
   <section class="music-hero"></section>
 
-  <!-- Intro-Text -->
   <section class="music-intro">
     <h2>🎵 Techno mit Gefühl</h2>
     <p>
-      Hier findest du unsere Auswahl an <strong>Live Sets, Mixes und musikalischen Reisen</strong>.  
-      Ob <strong>Deep Techno, Melodic Peak Time, Progressive oder Hypnotic Bass</strong> –  
-      jedes Set trägt Emotionen, Spannung und Klangvisionen in sich.  
-      <br><br>
-      Für uns ist Musik mehr als Sound – sie ist Geschichte, Erinnerung und Ausdruck zugleich.
+      Willkommen in unserer Klangwelt. Hier findest du alle Sets, Mixes und Live-Sessions,  
+      die wir auf SoundCloud veröffentlicht haben: Deep Techno, Peak Time, Progressive,  
+      hypnotische Bässe – alle mit Herz und Seele.  
+      Jedes Set ist eine Geschichte für sich – mach dich bereit zum Eintauchen.
     </p>
   </section>
 
-  <!-- SoundCloud-Playlist einbetten -->
-  <section class="music-player-section">
-    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/drgray_sic/sets/drgray-mixes&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true">
-    </iframe>
-    <div class="more-link">
-      <a href="https://soundcloud.com/drgray_sic" target="_blank">🎧 Mehr Sets auf SoundCloud ansehen</a>
+  <section class="music-sets-grid">
+    <!-- Beispiel mit allen geposteten Links -->
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/dOxVC55UeSAgRs91vO&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/0oqZUpEsNWS5MWa3iu&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/TAddoZLZEKl7NqikWz&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/vWT0KDLsGNpjq0mxzd&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/3Bk9HEP99qyjLTJo0Z&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/8yAWdNruXyTTZj2DAD&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/6g7SNZuxgOAeo8EAVm&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/YzbUCh9h7SGtUls4x3&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/VEPFyOM1zqI8DQ0baK&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/dZLDusf7ZM3iqXIJOv&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/MWgj9GJMPyaS7aJIKN&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/xAqxMz2ckOKVwac0m7&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/v3BpdSVzBsQ7pJl9Wl&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/r11KKpPqczNSVpk0QC&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
+    </div>
+    <div class="set-item">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/zkX8cc3Ir7hqubre9j&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+      </iframe>
     </div>
   </section>
 
