--- a/musik.html
+++ b/musik.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <header class="main-header sticky">
+  <header class="main-header">
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -23,104 +22,40 @@
 
   <section class="music-heading">
     <div class="music-header-container">
-      <img src="assets/images/drgray-logo.png" alt="Dr. Gray Logo" class="logo-small left">
+      <img src="assets/images/drgray-logo-small.png" alt="Dr. Gray Logo" class="logo-small left">
       <h1 class="golden-heading">Musik – Dr. Gray &amp; Mrs. Dr. Gray</h1>
-      <img src="assets/images/mrsdrgray-logo.png" alt="Mrs. Dr. Gray Logo" class="logo-small right">
+      <img src="assets/images/mrsdrgray-logo-small.png" alt="Mrs. Dr. Gray Logo" class="logo-small right">
     </div>
   </section>
-
-  <section class="music-hero"></section>
 
   <section class="music-intro">
     <h2>🎵 Techno mit Gefühl</h2>
     <p>
-      Willkommen in unserer Klangwelt. Hier findest du alle Sets, Mixes und Live-Sessions,  
-      die wir auf SoundCloud veröffentlicht haben: Deep Techno, Peak Time, Progressive,  
-      hypnotische Bässe – alle mit Herz und Seele.  
-      Jedes Set ist eine Geschichte für sich – mach dich bereit zum Eintauchen.
+      Willkommen in unserer Klangwelt. Hier findest du ausgewählte Sets und Mixes, 
+      die wir persönlich kuratiert haben. Performances im Herzen: Deep, Melodic, Progressive – 
+      alles mit Feeling und Tiefe.
     </p>
   </section>
 
   <section class="music-sets-grid">
-    <!-- Beispiel mit allen geposteten Links -->
+    <!-- Test mit drei Sets -->
     <div class="set-item">
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/dOxVC55UeSAgRs91vO&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
       </iframe>
+      <p>Track 1</p>
     </div>
     <div class="set-item">
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/0oqZUpEsNWS5MWa3iu&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
       </iframe>
+      <p>Track 2</p>
     </div>
     <div class="set-item">
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/TAddoZLZEKl7NqikWz&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
       </iframe>
-    </div>
-
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/vWT0KDLsGNpjq0mxzd&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/3Bk9HEP99qyjLTJo0Z&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/8yAWdNruXyTTZj2DAD&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/6g7SNZuxgOAeo8EAVm&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/YzbUCh9h7SGtUls4x3&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/VEPFyOM1zqI8DQ0baK&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/dZLDusf7ZM3iqXIJOv&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/MWgj9GJMPyaS7aJIKN&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/xAqxMz2ckOKVwac0m7&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/v3BpdSVzBsQ7pJl9Wl&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/r11KKpPqczNSVpk0QC&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-    </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//on.soundcloud.com/zkX8cc3Ir7hqubre9j&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
+      <p>Track 3</p>
     </div>
   </section>
 
